<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_gradient_drawable"
    tools:context=".GetFarmDetails">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="55dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/TitleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/splash_screen_foreground"
        tools:ignore="MissingConstraints,ImageContrastCheck" />

    <TextView
        android:id="@+id/TitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="33dp"
        android:fontFamily="@font/inknut_antiqua_semibold"
        android:text="@string/enter_farm_details"
        android:textColor="#546E7A"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Latitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/Latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/inknut_antiqua_semibold"
        android:text="@string/enter_farm_latitude"
        android:textColor="#BF360C"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/LatCoordinates"
        app:layout_constraintEnd_toEndOf="@+id/TitleText"
        app:layout_constraintStart_toStartOf="@id/LatCoordinates"
        app:layout_constraintTop_toBottomOf="@+id/TitleText"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/Longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="55dp"
        android:fontFamily="@font/inknut_antiqua_semibold"
        android:text="@string/enter_farm_longitude"
        android:textColor="#616161"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/LongCoordinates"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/LongCoordinates"
        app:layout_constraintTop_toBottomOf="@id/LatCoordinates"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/LongCoordinates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:fontFamily="@font/inknut_antiqua_semibold"
        android:hint="@string/longitude_coordinates"
        android:importantForAutofill="no"
        android:inputType="textPersonName|text"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#00695C"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/SubmitDetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Longitude"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/SubmitDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/inknut_antiqua_semibold"
        android:text="@string/submit"
        android:textColor="#00695C"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LongCoordinates"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/LatCoordinates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:fontFamily="@font/inknut_antiqua_semibold"
        android:hint="@string/latitude_coordinates"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#004D40"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/Longitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Latitude" />

</androidx.constraintlayout.widget.ConstraintLayout>