<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_gradient_drawable"
    tools:context=".FarmFeatures">

    <TextView
        android:id="@+id/FarmFeaturesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="174dp"
        android:layout_marginTop="142dp"
        android:layout_marginEnd="179dp"
        android:layout_marginBottom="570dp"
        android:fontFamily="@font/inknut_antiqua_semibold"
        android:text="@string/farm_features"
        android:textColor="#0277BD"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/IrrigationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="133dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="385dp"
        android:fontFamily="@font/inknut_antiqua_semibold"
        android:text="@string/irrigation_practice"
        android:textColor="#546E7A"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.661"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FarmFeaturesLabel"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/Irrigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="34dp"
        android:fontFamily="@font/inknut_antiqua_semibold"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/CroppingPatternLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IrrigationLabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/CroppingPatternLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="146dp"
        android:layout_marginTop="133dp"
        android:layout_marginEnd="207dp"
        android:layout_marginBottom="233dp"
        android:fontFamily="@font/inknut_antiqua_semibold"
        android:text="@string/cropping_pattern"
        android:textColor="#616161"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.365"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IrrigationLabel" />

    <TextView
        android:id="@+id/CroppingPattern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="37dp"
        android:layout_marginBottom="150dp"
        android:fontFamily="@font/inknut_antiqua_semibold"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CroppingPatternLabel"
        app:layout_constraintVertical_bias="0.01999998" />
</androidx.constraintlayout.widget.ConstraintLayout>